--- a/index.html
+++ b/index.html
@@ -1,16 +1,42 @@
+<!DOCTYPE html>
 <html>
+  <!-- This is the head -->
     <head>
-    <script src="script.js"></script>
-    <link rel="stylesheet" href="style.css">
+      <script src="script.js"></script>
+      <title>Simple Interest Calculator</title>
+      <link rel="stylesheet" href="style.css">
     </head>
+    <!-- This is the body -->
     <body>
-        <h1>Simple Interest Calculator</h1>
-
-        Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="number"  id="rate">  <br/>
-        No. of Years <input type="number"  id="years">  <br/>
-        Interest : <span id="result"></span><br>
-
-        <button onclick="compute()">Compute</button>
+      <!-- This is div for the main containt of the page -->
+      <div class="maindiv">
+          <h1>Simple Interest Calculator</h1>
+          <div class="form1">
+              <span>Amount</span> <input type="number"  id="principal" class="input">  <br/>
+              <span>Interest Rate</span><input type="range" class="input" id="rate" min="1" max="20" value="10.5" step="0.25" onchange="updateRate()">
+              <span id="rate_val">10.25%</span>
+              <br/>
+              <!-- This is option menu for choose how many years-->
+              <span>No. of Years</span>
+              <select id="years" class="input">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10</option>
+              </select><br>
+              <button onclick="compute()">Compute Interest</button><br>
+              <span id="result"></span>
+          </div>
+          <!-- The Footer -->
+          <footer>
+            &#169; This Calculator belongs to Abdulaziz Muthanna
+          </footer>
+        </div>
     </body>
 </html>
