--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <div class="form1">
               <span>Amount</span> <input type="number"  id="principal" class="input">  <br/>
               <span>Interest Rate</span><input type="range" class="input" id="rate" min="1" max="20" value="10.5" step="0.25" onchange="updateRate()">
-              <span id="rate_val">10.25%</span>
+              <span id="rate_val">10.25</span>%
               <br/>
               <!-- This is option menu for choose how many years-->
               <span>No. of Years</span>
