--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </div>
           <!-- The Footer -->
           <footer>
-            &#169; This Calculator belongs to Abdulaziz Muthanna
+            &#169;  Everyone Can Get Rich <br>This Calculator belongs to Abdulaziz Muthanna
           </footer>
         </div>
     </body>
