--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <!-- This is the head -->
     <head>
       <script src="script.js"></script>
-      <title>Simple Interest Calculator</title>
+      <title>Web App - Simple Interest Calculator</title>
       <link rel="stylesheet" href="style.css">
     </head>
     <!-- This is the body -->
